# kernels-community

./: .gitignore  .gitmodules  AGENTS.md  CONTRIBUTING.md  README.md  build-concurrency.json  build.toml  flake.nix  flash-attn-ops-plan.md  terraform.tfstate  validate_hub.py
natten/: CARD.md  CMakeLists.txt  build.toml  flake.nix  metadata-cann.json  metadata-cpu.json  metadata-cuda.json  metadata-metal.json  metadata-neuron.json  metadata-rocm.json  metadata-xpu.json  pyproject.toml  setup.py
natten/benchmarks/: benchmark.py
natten/cmake/: build-variants.cmake  kernel.cmake  utils.cmake
natten/csrc/autogen/include/natten_autogen/cuda/blackwell_fmha/: dispatch_head_dim.h  dispatch_tile_size.h  interface.h  kernels.h
natten/csrc/autogen/include/natten_autogen/cuda/blackwell_fmha_bwd/: dispatch_head_dim.h  dispatch_tile_size.h  interface.h  kernels.h
natten/csrc/autogen/include/natten_autogen/cuda/blackwell_fna/: dispatch_cm.h  dispatch_dtype.h  dispatch_head_dim.h  dispatch_tile_shape.h  interface.h  kernels.h
natten/csrc/autogen/include/natten_autogen/cuda/blackwell_fna_bwd/: dispatch_cm.h  dispatch_dtype.h  dispatch_head_dim.h  dispatch_tile_shape.h  interface.h  kernels.h
natten/csrc/autogen/include/natten_autogen/cuda/fmha/: dispatch_dtype.h  interface.h  kernels.h
natten/csrc/autogen/include/natten_autogen/cuda/fna/: dispatch_cm.h  dispatch_device.h  dispatch_dtype.h  interface.h  kernels.h
natten/csrc/autogen/include/natten_autogen/cuda/hopper_fmha/: dispatch_head_dim.h  dispatch_tile_size.h  interface.h  kernels.h
natten/csrc/autogen/include/natten_autogen/cuda/hopper_fmha_bwd/: dispatch_head_dim.h  dispatch_tile_size.h  interface.h  kernels.h
natten/csrc/autogen/include/natten_autogen/cuda/hopper_fna/: dispatch_cm.h  dispatch_dtype.h  dispatch_head_dim.h  dispatch_tile_shape.h  interface.h  kernels.h
natten/csrc/autogen/include/natten_autogen/cuda/hopper_fna_bwd/: dispatch_cm.h  dispatch_dtype.h  dispatch_head_dim.h  dispatch_tile_shape.h  interface.h  kernels.h
natten/csrc/autogen/include/natten_autogen/cuda/reference/: dispatch_cm.h  dispatch_dtype.h  interface.h  kernels.h
natten/csrc/autogen/src/cuda/blackwell_fmha/: source_0.cu  source_1.cu  source_2.cu  source_3.cu
natten/csrc/autogen/src/cuda/blackwell_fmha_bwd/: source_0.cu  source_1.cu  source_2.cu  source_3.cu
natten/csrc/autogen/src/cuda/blackwell_fna/: source_0.cu  source_1.cu  source_10.cu  source_11.cu  source_12.cu  source_13.cu  source_14.cu  source_15.cu  source_16.cu  source_17.cu  source_18.cu  source_19.cu  source_2.cu  source_20.cu  source_21.cu  source_22.cu  source_23.cu  source_24.cu  source_25.cu  source_26.cu  source_27.cu  source_3.cu  source_4.cu  source_5.cu  source_6.cu  source_7.cu  source_8.cu  source_9.cu
natten/csrc/autogen/src/cuda/blackwell_fna_bwd/: source_0.cu  source_1.cu  source_10.cu  source_11.cu  source_12.cu  source_13.cu  source_2.cu  source_3.cu  source_4.cu  source_5.cu  source_6.cu  source_7.cu  source_8.cu  source_9.cu
natten/csrc/autogen/src/cuda/fmha/: source_0.cu  source_1.cu  source_2.cu  source_3.cu  source_4.cu
natten/csrc/autogen/src/cuda/fna/: source_0.cu  source_1.cu  source_10.cu  source_11.cu  source_12.cu  source_13.cu  source_14.cu  source_15.cu  source_16.cu  source_17.cu  source_18.cu  source_19.cu  source_2.cu  source_20.cu  source_21.cu  source_22.cu  source_23.cu  source_24.cu  source_25.cu  source_26.cu  source_27.cu  source_28.cu  source_29.cu  source_3.cu  source_30.cu  source_31.cu  source_32.cu  source_33.cu  source_34.cu  source_35.cu  source_36.cu  source_37.cu  source_38.cu  source_39.cu  source_4.cu  source_40.cu  source_41.cu  source_42.cu  source_43.cu  source_44.cu  (+24 more)
natten/csrc/autogen/src/cuda/hopper_fmha/: source_0.cu  source_1.cu  source_2.cu  source_3.cu  source_4.cu
natten/csrc/autogen/src/cuda/hopper_fmha_bwd/: source_0.cu  source_1.cu  source_2.cu  source_3.cu  source_4.cu
natten/csrc/autogen/src/cuda/hopper_fna/: source_0.cu  source_1.cu  source_2.cu  source_3.cu  source_4.cu  source_5.cu  source_6.cu  source_7.cu
natten/csrc/autogen/src/cuda/hopper_fna_bwd/: source_0.cu  source_1.cu  source_2.cu  source_3.cu
natten/csrc/autogen/src/cuda/reference/: source_0.cu  source_1.cu
natten/csrc/include/natten/: helpers.h  natten.h
natten/csrc/include/natten/cuda/fmha_blackwell/collective/: fmha_common.hpp
natten/csrc/src/: blackwell_fmha.cu  blackwell_fna_backward.cu  blackwell_fna_forward.cu  compute_delta.cu  fmha.cu  fna_backward.cu  fna_forward.cu  hopper_fmha.cu  hopper_fna_backward.cu  hopper_fna_forward.cu  reference_backward.cu  reference_forward.cu  token_permute.cu  token_unpermute.cu
natten/scripts/: autogen_blackwell_fmha.py  autogen_blackwell_fmha_bwd.py  autogen_blackwell_fna.py  autogen_blackwell_fna_bwd.py  autogen_fmha.py  autogen_fna.py  autogen_hopper_fmha.py  autogen_hopper_fmha_bwd.py  autogen_hopper_fna.py  autogen_hopper_fna_bwd.py  autogen_reference_fna.py  generate_build_toml.py  regen.sh
natten/tests/: test_kernels_ci.py
natten/torch-ext/: torch_binding.cpp
natten/torch-ext/natten/: __init__.py  _environment.py  attn_merge.py  functional.py  modules.py
natten/torch-ext/natten/_libnatten/: __init__.py  torch_wrappers.py
natten/torch-ext/natten/backends/: __init__.py  blackwell_fmha.py  blackwell_fna.py  flex.py  fmha.py  fna.py  hopper_fmha.py  hopper_fna.py  reference.py
natten/torch-ext/natten/backends/configs/: __init__.py  checks.py
natten/torch-ext/natten/backends/configs/cutlass/: __init__.py  backward_knobs.py  fna_backward_128x128.py  fna_backward_128x64.py  fna_backward_64x64.py  fna_forward_32x128.py  fna_forward_64x128.py  fna_forward_64x64.py
natten/torch-ext/natten/backends/configs/cutlass_blackwell/: __init__.py
natten/torch-ext/natten/backends/configs/cutlass_hopper/: __init__.py
natten/torch-ext/natten/backends/configs/flex/: __init__.py
natten/torch-ext/natten/token_permute/: __init__.py  cutlass_impl.py  frontend.py  torch_impl.py
natten/torch-ext/natten/utils/: checks.py  environment.py  log.py  testing.py  tuples.py  varlen.py
(+4312 files in other folders)
